仅编译amd64位版本

--- a/Makefile.cross-compiles
+++ b/Makefile.cross-compiles
@@ -2,7 +2,8 @@ export PATH := $(GOPATH)/bin:$(PATH)
 export GO111MODULE=on
 LDFLAGS := -s -w
 
-os-archs=darwin:amd64 darwin:arm64 freebsd:amd64 linux:amd64 linux:arm linux:arm64 windows:amd64 windows:arm64 linux:mips64 linux:mips64le linux:mips:softfloat linux:mipsle:softfloat linux:riscv64
+#os-archs=darwin:amd64 darwin:arm64 freebsd:amd64 linux:amd64 linux:arm linux:arm64 windows:amd64 windows:arm64 linux:mips64 linux:mips64le linux:mips:softfloat linux:mipsle:softfloat linux:riscv64
+#os-archs=linux:amd64 windows:amd64
 
 all: build
 
@@ -21,5 +22,5 @@ app:
 	)
 	@mv ./release/frpc_windows_amd64 ./release/frpc_windows_amd64.exe
 	@mv ./release/frps_windows_amd64 ./release/frps_windows_amd64.exe
-	@mv ./release/frpc_windows_arm64 ./release/frpc_windows_arm64.exe
-	@mv ./release/frps_windows_arm64 ./release/frps_windows_arm64.exe
+	#@mv ./release/frpc_windows_arm64 ./release/frpc_windows_arm64.exe
+	#@mv ./release/frps_windows_arm64 ./release/frps_windows_arm64.exe
