--- a/Makefile.cross-compiles
+++ b/Makefile.cross-compiles
@@ -3,7 +3,7 @@ export GO111MODULE=on
 LDFLAGS := -s -w
 
 #os-archs=darwin:amd64 darwin:arm64 freebsd:amd64 linux:amd64 linux:arm linux:arm64 windows:amd64 windows:arm64 linux:mips64 linux:mips64le linux:mips:softfloat linux:mipsle:softfloat linux:riscv64
-#os-archs=linux:amd64 windows:amd64
+os-archs=linux:amd64 windows:amd64
 
 all: build
 
